T-3 | User create answer to question

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,3 +1,10 @@
 = @question.title
 br
 = @question.body
+br
+
+p = t('.new_answer')
+= form_for [@question, @answer] do |f|
+  = f.label :body
+  = f.text_area :body
+  = f.submit
