T-3 | Author can deletes own question

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,6 +2,9 @@
 br
 = @question.body
 br
+- if current_user == @question.user
+  = link_to 'Delete', @question, method: :delete
+
 p = t('.answers_list')
 - @question.answers.each do |a|
   p
