--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,7 +2,7 @@
 br
 = @question.body
 br
-- if current_user == @question.user
+- if user_signed_in? && current_user.author_of?(@question)
   = link_to 'Delete', @question, method: :delete
 
 p = t('.answers_list')
@@ -11,7 +11,7 @@ p = t('.answers_list')
     div id="answer_#{a.id}"
       p
         = a.body
-      - if user_signed_in? && current_user == a.user
+      - if user_signed_in? && current_user.author_of?(a)
         = link_to 'Delete answer', question_answer_path(@question, a), method: :delete
 
 - if user_signed_in?
