--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,3 @@
 $('.answers').html('<%= j render 'questions/answers' %>');
 $('#answer_body').val('');
+$('.notice').html('<%= j render 'layouts/notice' %>');
