--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     <%= link_to('Sign in', new_user_session_path)  %>
     <%= link_to('Sign up', new_user_registration_path)  %>
 <% end %>
-<p class="notice"><%= notice %></p>
+
+<%= render 'layouts/notice' %>
 <p class="alert"><%= alert %></p>
 
 <%= yield %>
