--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,3 +1,3 @@
-$('.answers').html('<%= j render 'questions/answers' %>');
+$('.answers').append('<%= j render partial: 'questions/answer', object: @answer %>');
 $('#answer_body').val('');
 $('.notice').html('<%= j render 'layouts/notice' %>');
