--- a/app/views/questions/_answers.html.slim
+++ b/app/views/questions/_answers.html.slim
@@ -1,4 +1,4 @@
 p = t('.answers_list')
 - @question.answers.each do |answer|
   .answer
-    = render partial: "answer", locals: { answer: answer }
+    = render answer
