--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,7 +3,7 @@
     p
       = answer.body
     - if user_signed_in? && current_user.author_of?(answer)
-      p= link_to 'Edit', '', class: 'edit-answer-link', data: { answer_id: answer.id }
+      p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
       = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
         = f.label :body, 'Answer'
         = f.text_area :body
