T-5 | Update js clean actions after Answers#create

--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,3 +1,5 @@
+<% unless @answer.errors.present? %>
+    $('#new_answer').find("#answer_body").val('');
+<% end %>
 $('.answers').append('<%= j render @answer %>');
-$('#answer_body').val('');
 $('.notice').html('<%= j render 'layouts/notice' %>');
