T-5 | Update Answers#destroy for AJAX

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -8,4 +8,4 @@
         = f.label :body, 'Answer'
         = f.text_area :body
         = f.submit 'Update'
-      = link_to 'Delete answer', question_answer_path(@question, answer), method: :delete
+      = link_to 'Delete answer', question_answer_path(@question, answer), method: :delete, remote: true
