--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,9 +1,5 @@
-= @question.title
-br
-= @question.body
-br
-- if user_signed_in? && current_user.author_of?(@question)
-  = link_to 'Delete', @question, method: :delete
+.question
+  = render @question
 .answers
   p = t('.answers_list')
   = render @question.answers
