T-5 | Update Questions and Answers specs for locales

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,11 +2,11 @@ h1= @question.title
 p= @question.body
 br
 - if user_signed_in? && current_user.author_of?(@question)
-  p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: @question.id }
+  p= link_to t('.edit'), '#', class: 'edit-question-link', data: { question_id: @question.id }
   = form_for @question, remote: true, html: {id: "edit-question-#{@question.id}"} do |f|
     = f.label :title
     = f.text_field :title
     = f.label :body
     = f.text_area :body
-    = f.submit 'Update'
-  = link_to 'Delete', @question, method: :delete
+    = f.submit
+  = link_to t('.delete'), @question, method: :delete
