--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,8 @@
-h1 = t('.h1')
-- @questions.each do |q|
-  p = link_to q.title, q
-
-= link_to t('.create_question'), new_question_path
+div class='panel panel-default'
+  .panel-heading
+    h1= t('.h1')
+  .panel-body
+    - @questions.each do |q|
+      p= link_to q.title, q
+  .panel-footer
+    = link_to t('.create_question'), new_question_path
