--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,12 +1,15 @@
-h1= @question.title
-p= @question.body
-br
-- if user_signed_in? && current_user.author_of?(@question)
-  p= link_to t('.edit'), '#', class: 'edit-question-link', data: { question_id: @question.id }
-  = form_for @question, remote: true, html: {id: "edit-question-#{@question.id}"} do |f|
-    = f.label :title
-    = f.text_field :title
-    = f.label :body
-    = f.text_area :body
-    = f.submit
-  = link_to t('.delete'), @question, method: :delete
+div class='panel panel-default'
+  div class='panel-heading'
+    h1= @question.title
+  div class='panel-body'
+    = @question.body
+  div class='panel-footer'
+    - if user_signed_in? && current_user.author_of?(@question)
+      p= link_to t('.edit'), '#', class: 'edit-question-link', data: { question_id: @question.id }
+      = form_for @question, remote: true, html: {id: "edit-question-#{@question.id}"} do |f|
+        = f.label :title
+        = f.text_field :title
+        = f.label :body
+        = f.text_area :body
+        = f.submit
+      = link_to t('.delete'), @question, method: :delete
