T-5 | Add output question errors for Question#update

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -6,6 +6,7 @@ div class='panel panel-default'
   div class='panel-footer'
     - if user_signed_in? && current_user.author_of?(@question)
       p= link_to t('.edit'), '#', class: 'edit-question-link', data: { question_id: @question.id }
+      div class='question-errors'
       = form_for @question, remote: true, html: {id: "edit-question-#{@question.id}"} do |f|
         = f.label :title
         = f.text_field :title
