--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -6,6 +6,7 @@
       - elsif user_signed_in? && current_user.author_of?(@question)
         = link_to t('.set_best'), best_question_answer_path(@question, answer), method: :patch, remote: true
     div class='panel-body'
+      .errors
       = answer.body
     div class='panel-footer'
       - if user_signed_in? && current_user.author_of?(answer)
