--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,7 +2,11 @@ div class='panel panel-default'
   div class='panel-heading'
     h1= @question.title
   div class='panel-body'
-    = @question.body
+    p= @question.body
+    p= t('attachmets')
+    ul
+      - @question.attachments.each do |a|
+        li= link_to a.file.identifier, a.file.url
   div class='panel-footer'
     - if user_signed_in? && current_user.author_of?(@question)
       p= link_to t('.edit'), '#', class: 'edit-question-link', data: { question_id: @question.id }
