--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,6 +1,13 @@
 = form_for @question do |f|
-  = f.label :title
-  = f.text_field :title
-  = f.label :body
-  = f.text_area :body
-  = f.submit
+  .input-group
+    = f.label :title
+    = f.text_field :title
+  .input-group
+    = f.label :body
+    = f.text_area :body
+  .input-group
+    = f.fields_for :attachments do |a|
+      = a.label :file
+      = a.file_field :file
+  br
+    = f.submit class: 'btn btn-default'
