T-6 | User can add files to answers

--- a/app/views/answers/_new.html.slim
+++ b/app/views/answers/_new.html.slim
@@ -7,4 +7,9 @@
         .input-group
           = f.label :body
           = f.text_area :body
+        .input-group
+          = f.fields_for :attachments do |a|
+            = a.label :file
+            = a.file_field :file
+        br
         = f.submit class: 'btn btn-default'
