--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -8,6 +8,9 @@
     div class='panel-body'
       .errors
       = answer.body
+      ul
+        - answer.attachments.each do |a|
+          li= link_to a.file.identifier, a.file.url
     div class='panel-footer'
       - if user_signed_in? && current_user.author_of?(answer)
         p= link_to t('.edit'), '#', class: 'edit-answer-link', data: { answer_id: answer.id }
