--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -7,7 +7,7 @@
     = f.text_area :body
   .input-group
     = f.fields_for :attachments do |a|
-      = a.label :file
-      = a.file_field :file
+      = render 'layouts/attachment_fields', f: a
+      = link_to_add_association 'Add file', f, :attachments, partial: 'layouts/attachment_fields'
   br
     = f.submit class: 'btn btn-default'
