--- a/app/views/layouts/_attachment_fields.html.slim
+++ b/app/views/layouts/_attachment_fields.html.slim
@@ -1,2 +1,4 @@
+.attachment-file
   = f.label :file
   = f.file_field :file
+  = link_to_remove_association 'Remove file', f, { wrapper_class: 'attachment-file'}
