T-6 | User can remove files when he edit question or answer

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -17,5 +17,7 @@
         = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
           = f.label :body, 'Answer'
           = f.text_area :body
+          = f.fields_for :attachments do |a|
+            = render 'layouts/attachment_fields', f: a
           = f.submit
         = link_to t('.delete'), question_answer_path(@question, answer), method: :delete, remote: true
