--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -16,5 +16,7 @@ div class='panel panel-default'
         = f.text_field :title
         = f.label :body
         = f.text_area :body
+        = f.fields_for :attachments do |a|
+          = render 'layouts/attachment_fields', f: a
         = f.submit
       = link_to t('.delete'), @question, method: :delete
