--- a/app/views/layouts/_attachment_fields.html.slim
+++ b/app/views/layouts/_attachment_fields.html.slim
@@ -1,4 +1,7 @@
 .attachment-file
   = f.label :file
-  = f.file_field :file
-  = link_to_remove_association 'Remove file', f, { wrapper_class: 'attachment-file'}
+  - if f.object.new_record?
+    = f.file_field :file
+  - else
+    = f.object.file.identifier.to_s
+  = link_to_remove_association 'Remove file', f, { wrapper_class: 'attachment-file' }
