T-6 | Find problem with helper 'link_to_add_association'. This helper added attachment-field above oneself element.

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -15,9 +15,12 @@
       - if user_signed_in? && current_user.author_of?(answer)
         p= link_to t('.edit'), '#', class: 'edit-answer-link', data: { answer_id: answer.id }
         = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
-          = f.label :body, 'Answer'
-          = f.text_area :body
-          = f.fields_for :attachments do |a|
-            = render 'layouts/attachment_fields', f: a
+          .input-group
+            = f.label :body, 'Answer'
+            = f.text_area :body
+          .input-group
+            = f.fields_for :attachments do |a|
+              = render 'layouts/attachment_fields', f: a
+            = link_to_add_association f, :attachments, partial: 'layouts/attachment_fields'
           = f.submit
         = link_to t('.delete'), question_answer_path(@question, answer), method: :delete, remote: true
