--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -12,11 +12,15 @@ div class='panel panel-default'
       p= link_to t('.edit'), '#', class: 'edit-question-link', data: { question_id: @question.id }
       div class='question-errors'
       = form_for @question, remote: true, html: {id: "edit-question-#{@question.id}"} do |f|
-        = f.label :title
-        = f.text_field :title
-        = f.label :body
-        = f.text_area :body
-        = f.fields_for :attachments do |a|
-          = render 'layouts/attachment_fields', f: a
-        = f.submit
+        .input-group
+          = f.label :title
+          = f.text_field :title
+        .input-group
+          = f.label :body
+          = f.text_area :body
+        .input-group
+          = f.fields_for :attachments do |a|
+            = render 'layouts/attachment_fields', f: a
+          = link_to_add_association f, :attachments, partial: 'layouts/attachment_fields'
+        = f.submit class: 'btn btn-default'
       = link_to t('.delete'), @question, method: :delete
