--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,5 +3,6 @@
 .answers
   p = t('.answers_list')
   = render @question.answers.order_best_first
-
 = render 'answers/new'
+
+= subscribe_to "/questions/#{@question.id}/answers"
