--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,4 +1,8 @@
 = form_for @question do |f|
+  .errors
+    - if @question.errors.any?
+      - @question.errors.full_messages.each do |msg|
+        p= msg
   .input-group
     = f.label :title
     = f.text_field :title
