T-8 | update private_pub channel 'questions/#{question.id}/answers' for edit and destroy

--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,2 +1,4 @@
-$('#answer_<%= @answer.id %>').remove();
+<% publish_to "/questions/#{@question.id}/answers" do %>
+    $('#answer_<%= @answer.id %>').remove();
+<% end %>
 $('.notice').html('<%= j render 'layouts/notice' %>');
