T-8 | private_pub 'questions/#{question.id}' for update question

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,4 +5,5 @@
   = render @question.answers.order_best_first
 = render 'answers/new'
 
+= subscribe_to "/questions/#{@question.id}"
 = subscribe_to "/questions/#{@question.id}/answers"
