T-8 | Refactor name pub_sub '/questions'

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -8,4 +8,4 @@ div class='panel panel-default'
   .panel-footer
     = link_to t('.create_question'), new_question_path
 
-= subscribe_to '/questions/index'
+= subscribe_to '/questions'
