--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,11 +1,12 @@
-div class='panel panel-default'
-  .panel-heading
-    h1= t('.h1')
-  .panel-body
-    .questions
-      - @questions.each do |q|
-        p= link_to q.title, q
-  .panel-footer
-    = link_to t('.create_question'), new_question_path
+- if policy(@questions).index?
+  div class='panel panel-default'
+    .panel-heading
+      h1= t('.h1')
+    .panel-body
+      .questions
+        - @questions.each do |q|
+          p= link_to q.title, q
+    .panel-footer
+      = link_to t('.create_question'), new_question_path
 
-= subscribe_to '/questions'
+  = subscribe_to '/questions'
