--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,7 +3,7 @@
     .panel-heading
       - if answer.best?
         = t('.best')
-      - elsif user_signed_in? && current_user.author_of?(@question)
+      - elsif policy(answer).best?
         = link_to t('.set_best'), best_question_answer_path(@question, answer), method: :patch, remote: true
     div class='panel-body'
       = render 'layouts/votable_manager', object: answer
@@ -13,7 +13,7 @@
         - answer.attachments.each do |a|
           li= link_to a.file.identifier, a.file.url
     div class='panel-footer'
-      - if user_signed_in? && current_user.author_of?(answer)
+      - if policy(answer).update?
         p= link_to t('.edit'), '#', class: 'edit-answer-link', data: { answer_id: answer.id }
         = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
           .input-group
