--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,17 +1,18 @@
-= form_for @question do |f|
-  .errors
-    - if @question.errors.any?
-      - @question.errors.full_messages.each do |msg|
-        p= msg
-  .input-group
-    = f.label :title
-    = f.text_field :title
-  .input-group
-    = f.label :body
-    = f.text_area :body
-  .input-group
-    = f.fields_for :attachments do |a|
-      = render 'layouts/attachment_fields', f: a
-    = link_to_add_association f, :attachments, partial: 'layouts/attachment_fields'
-  br
-    = f.submit class: 'btn btn-default'
+- if policy(Question.new).new?
+  = form_for @question do |f|
+    .errors
+      - if @question.errors.any?
+        - @question.errors.full_messages.each do |msg|
+          p= msg
+    .input-group
+      = f.label :title
+      = f.text_field :title
+    .input-group
+      = f.label :body
+      = f.text_area :body
+    .input-group
+      = f.fields_for :attachments do |a|
+        = render 'layouts/attachment_fields', f: a
+      = link_to_add_association f, :attachments, partial: 'layouts/attachment_fields'
+    br
+      = f.submit class: 'btn btn-default'
