--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,10 +1,11 @@
-.question
-  = render @question
-.answers
-  p = t('.answers_list')
-  = render @question.answers.order_best_first
-= render 'answers/new'
+- if policy(@question).show?
+  .question
+    = render @question
+  .answers
+    p = t('.answers_list')
+    = render @question.answers.order_best_first
+  = render 'answers/new'
 
-= subscribe_to "/questions/#{@question.id}"
-= subscribe_to "/questions/#{@question.id}/answers"
-= subscribe_to "/comments"
+  = subscribe_to "/questions/#{@question.id}"
+  = subscribe_to "/questions/#{@question.id}/answers"
+  = subscribe_to "/comments"
