--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,6 +1,6 @@
-- if comment.persisted?
+- if comment.persisted? && policy(comment).show?
   p data-comment-id="#{comment.id}"
     = comment.body
     '
-    - if current_user && current_user.author_of?(comment)
+    - if policy(comment).destroy?
       = link_to 'Delete', comment_path(comment, format: :json), method: :delete, remote: true
