--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -2,7 +2,7 @@
   p Comments:
   .list
     = render object.comments
-  - if current_user
+  - if policy(Comment.new).create?
     p= link_to 'Add Comment', '#', class: 'add-comment-link', data: { commentable_id: object.id, commentable_type: object.class.to_s.downcase }
     = form_for [object, Comment.new], remote: true,
                html: { id: "new-comment-#{object.class.to_s.downcase}-#{object.id}", 'data-type': 'json' } do |f|
