--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -26,3 +26,12 @@ div class='panel panel-default'
         = f.submit class: 'btn btn-default'
       = link_to t('.delete'), @question, method: :delete
     = render 'comments/comments', object: @question
+
+
+- if policy(Subscription).create?
+  - if @question.subscribed?(current_user)
+    .subscription
+      = link_to 'Unsubscribe', question_unsubscribe_path(@question), method: :delete, remote: true
+  - unless @question.subscribed?(current_user)
+    .subscription
+      = link_to 'Subscribe', question_subscribe_path(@question), method: :post, remote: true
