cache-opt | cache

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,28 +1,29 @@
-- if answer.persisted?
-  div id="answer_#{answer.id}" class="panel panel-default"
-    .panel-heading
-      - if answer.best?
-        = t('.best')
-      - elsif policy(answer).best?
-        = link_to t('.set_best'), best_question_answer_path(@question, answer), method: :patch, remote: true
-    div class='panel-body'
-      = render 'layouts/votable_manager', object: answer
-      .errors
-      = answer.body
-      ul
-        - answer.attachments.each do |a|
-          li= link_to a.file.identifier, a.file.url
-    div class='panel-footer'
-      - if policy(answer).update?
-        p= link_to t('.edit'), '#', class: 'edit-answer-link', data: { answer_id: answer.id }
-        = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
-          .input-group
-            = f.label :body, 'Answer'
-            = f.text_area :body
-          .input-group
-            = f.fields_for :attachments do |a|
-              = render 'layouts/attachment_fields', f: a
-            = link_to_add_association f, :attachments, partial: 'layouts/attachment_fields'
-          = f.submit
-        = link_to t('.delete'), question_answer_path(@question, answer), method: :delete, remote: true
-      = render 'comments/comments', object: answer
+- cache answer do
+  - if answer.persisted?
+    div id="answer_#{answer.id}" class="panel panel-default"
+      .panel-heading
+        - if answer.best?
+          = t('.best')
+        - elsif policy(answer).best?
+          = link_to t('.set_best'), best_question_answer_path(@question, answer), method: :patch, remote: true
+      div class='panel-body'
+        = render 'layouts/votable_manager', object: answer
+        .errors
+        = answer.body
+        ul
+          - answer.attachments.each do |a|
+            li= link_to a.file.identifier, a.file.url
+      div class='panel-footer'
+        - if policy(answer).update?
+          p= link_to t('.edit'), '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+          = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
+            .input-group
+              = f.label :body, 'Answer'
+              = f.text_area :body
+            .input-group
+              = f.fields_for :attachments do |a|
+                = render 'layouts/attachment_fields', f: a
+              = link_to_add_association f, :attachments, partial: 'layouts/attachment_fields'
+            = f.submit
+          = link_to t('.delete'), question_answer_path(@question, answer), method: :delete, remote: true
+        = render 'comments/comments', object: answer
