--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -4,9 +4,10 @@
       h1= t('.h1')
     .panel-body
       .questions
-        - @questions.each do |q|
-          p= link_to q.title, q
-    .panel-footer
-      = link_to t('.create_question'), new_question_path
+        - cache collection_cache_key_for :question do
+          - @questions.each do |q|
+            p= link_to q.title, q
+      .panel-footer
+        = link_to t('.create_question'), new_question_path
 
-  = subscribe_to '/questions'
+= subscribe_to '/questions'
